--- a/public/sass/bootstrap/_grid.scss
+++ b/public/sass/bootstrap/_grid.scss
@@ -11,13 +11,13 @@
   @include container-fixed;
 
   @media (min-width: $screen-sm-min) {
-    width: $container-sm;
+    width: 90%;
   }
   @media (min-width: $screen-md-min) {
-    width: $container-md;
+    width: 90%;
   }
   @media (min-width: $screen-lg-min) {
-    width: $container-lg;
+    width: 90%;
   }
 }
 
