--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -269,7 +269,7 @@ figure {
 	&.fh5co-cover_2{
 		height: 600px;
 		@media screen and (max-width: $screen-sm) {
-			heifght: inherit;
+			height: inherit;
 			padding: 3em 0;
 		}
 
