--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1623,7 +1623,7 @@ div.cs-select{
 }
 
 #footer{
-	background: #393e46;
+	background: #393E46;
 	padding: 60px 0 40px;
 
 	p{
@@ -1686,7 +1686,7 @@ div.cs-select{
 		}
 	}
 	&:hover, &:active, &:focus {
-		background: #393e46!important;
+		background: #393E46!important;
 		color: $brand-white;
 		outline: none!important;
 	}
