--- a/public/pages/showcity/showcity.css
+++ b/public/pages/showcity/showcity.css
@@ -2,10 +2,11 @@
 body {
   padding: 10px;
   text-align: center;
-  background:f4f4f4;
+  background:#f4f4f4;
 }
 #carousel-example-generic {
   display: inline-block;
+  width:100%;
 }
 /*****************************/
 
@@ -690,14 +691,14 @@ hr {
   position: relative;
   float: left;
   width: 25%;
-  background-color: #128EF3;
+  background-color: white;
   overflow: hidden;
 }
 .item1:after {
   content: '';
   display: block;
   background-color: inherit;
-  opacity: 0.9;
+  opacity: 0.05;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -785,13 +786,13 @@ hr {
   font-style: 16px;
   padding: 0 15px;
   margin: 5px 0 0 0;
+  color: white;
 }
 
 .item-text-dek1 {
   text-transform: uppercase;
   font-style: 14px;
   font-size: 50px;
-  opacity: 0.7;
   margin: 0;
   color: white;
 }
