--- a/public/pages/profile/profile.css
+++ b/public/pages/profile/profile.css
@@ -289,7 +289,8 @@ tr.shopping-cart-item td {
   font-size: 1em;
   width: 100%;
   min-width: 150px;
-  float: right;
+      margin: 0 auto;
+    display: block;
 }
 
 @media screen and (max-width: 1023px) {
